# lemmatizer-be

./: .gitignore  README.md  pyproject.toml  requirements.txt
lemmatizer_be/: _util.py  generate.py  lemmatizer.py
src/lemmatizer_be/: __init__.py  _timeit.py  _utils.py  exceptions.py  generate.py  lemmatizer.py
src/lemmatizer_be/server/: __init__.py  main.py  wsgi.py
tests/: test_lemmatizer.py
