[project]
name = "lemmatizer_be"
version = "0.0.1"
description = "Lemmatizer for Belarusian language (based on bnkorpus.info)"
authors = [
    { name = "Alexander Rusakevich", email = "mr.alexander.rusakevich@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry]
# packages = [{ include = "lemmatizer_be" }]

[tool.poetry.scripts]
generate = "lemmatizer_be.generate:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

